--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr" style="background-color: #212e3e">
+<html lang="en" dir="ltr"
+      style="background-color: #212e3e; --chakra-ui-color-mode:dark;"
+      data-theme="dark">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
+    <meta name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#212e3e" />
     <!--
           manifest.json provides metadata used when your web app is added to the
           homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -16,7 +17,7 @@
     <link
       rel="apple-touch-icon"
       sizes="76x76"
-      href="%PUBLIC_URL%/apple-icon.png"
+      href="%PUBLIC_URL%/apple-touch-icon.png"
     />
 <!--    <link-->
 <!--      rel="stylesheet"-->
@@ -40,11 +41,11 @@
 <!--      href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"-->
 <!--      rel="stylesheet"-->
 <!--    />-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons"
-    />
+<!--    <link-->
+<!--      rel="stylesheet"-->
+<!--      type="text/css"-->
+<!--      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons"-->
+<!--    />-->
 <!--    <link-->
 <!--      href="https://fonts.googleapis.com/icon?family=Material+Icons"-->
 <!--      rel="stylesheet"-->
