--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,10 @@
       sizes="76x76"
       href="%PUBLIC_URL%/apple-touch-icon.png"
     />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/react-custom-scroll@4.4.0/dist/customScroll.css"
+    />
 <!--    <link-->
 <!--      rel="stylesheet"-->
 <!--      href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css"-->
@@ -65,6 +69,30 @@
     <style>
       html,body,body>#root {height: 100%;}
       /** {outline: 1px solid #f00 !important;}*/
+
+      ::-webkit-scrollbar {
+        width: 10px;
+        height: 10px;
+      }
+      ::-webkit-scrollbar-thumb {
+        background: #494949;
+        border: 0px none #8e8e8e;
+        border-radius: 3px;
+      }
+      ::-webkit-scrollbar-thumb:hover {
+        background: #525252;
+      }
+      ::-webkit-scrollbar-thumb:active {
+        background: #626262;
+      }
+      ::-webkit-scrollbar-track {
+        background: #1f1f1f;
+        border: 0px none #8e8e8e;
+        border-radius: 3px;
+      }
+      ::-webkit-scrollbar-corner {
+        background: transparent;
+      }
     </style>
   </head>
   <body>
