--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
         -->
     <title>Froge Finance</title>
     <style>
-      html,body,body>#root {height: 100%;}
+      /*html,body,body>#root {height: 100%;}*/
       /** {outline: 1px solid #f00 !important;}*/
 
       ::-webkit-scrollbar {
