--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr" style="--chakra-ui-color-mode:dark;" data-theme="dark">
+<html lang="en" dir="ltr" style="background-color: #111623; --chakra-ui-color-mode:dark;" data-theme="dark">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="theme-color" content="#212e3e" />
-    <!--
-          manifest.json provides metadata used when your web app is added to the
-          homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-        -->
+    <!-- Primary Meta Tags -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <meta name="theme-color" content="#111623" />
+    <meta name="title" content="Froge Finance">
+    <meta name="description" content="Welcome to Froge!  The world's first, and leading, Eco-DeFi.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://froge.fi/">
+    <meta property="og:title" content="Froge Finance">
+    <meta property="og:description" content="Welcome to Froge!  The world's first, and leading, Eco-DeFi.">
+    <meta property="og:image" content="assets/cover.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://froge.fi/">
+    <meta property="twitter:title" content="Froge Finance">
+    <meta property="twitter:description" content="Welcome to Froge!  The world's first, and leading, Eco-DeFi.">
+    <meta property="twitter:image" content="assets/cover.png">
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link
@@ -17,55 +29,10 @@
       sizes="76x76"
       href="%PUBLIC_URL%/apple-touch-icon.png"
     />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/react-custom-scroll@4.4.0/dist/customScroll.css"
-    />
-<!--    <link-->
-<!--      rel="stylesheet"-->
-<!--      href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css"-->
-<!--    />-->
-<!--    <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>-->
-<!--    <link-->
-<!--      rel="stylesheet"-->
-<!--      href="https://cdnjs.cloudflare.com/ajax/libs/jvectormap/2.0.4/jquery-jvectormap.css"-->
-<!--      type="text/css"-->
-<!--      media="screen"-->
-<!--    />-->
-<!--    <link-->
-<!--      rel="stylesheet"-->
-<!--      href="//cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css"-->
-<!--      type="text/css"-->
-<!--      media="screen"-->
-<!--    />-->
-    <!--     Fonts and icons     -->
-<!--    <link-->
-<!--      href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"-->
-<!--      rel="stylesheet"-->
-<!--    />-->
-<!--    <link-->
-<!--      rel="stylesheet"-->
-<!--      type="text/css"-->
-<!--      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons"-->
-<!--    />-->
-<!--    <link-->
-<!--      href="https://fonts.googleapis.com/icon?family=Material+Icons"-->
-<!--      rel="stylesheet"-->
-<!--    />-->
-<!--    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>-->
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
-    <!--
-          Notice the use of %PUBLIC_URL% in the tags above.
-          It will be replaced with the URL of the `public` folder during the build.
-          Only files inside the `public` folder can be referenced from the HTML.
-
-          Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-          work correctly both with client-side routing and a non-root public URL.
-          Learn how to configure a non-root public URL by running `npm run build`.
-        -->
     <title>Froge Finance</title>
     <style>
-      html,body,body>#root {height: 100%;}
+      html,body,body>#root {min-height: 100%;}
       /** {outline: 1px solid #f00 !important;}*/
 
       ::-webkit-scrollbar {
@@ -108,11 +75,12 @@
         -webkit-justify-content: stretch;
         justify-content: stretch;
         width: 100%;
+        background-color: #111623;
       }
     </style>
   </head>
   <body>
-    <noscript> You need to enable JavaScript to run this app. </noscript>
+    <noscript> JavaScript must be enabled to run this app. </noscript>
     <div id="root"></div>
   </body>
 </html>
