colossal update to dApp - gen layout, scrollbar, history widget, stx, ponds, services ... basically everything

--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,7 @@
       /** {outline: 1px solid #f00 !important;}*/
 
       ::-webkit-scrollbar {
-        width: 10px;
-        height: 10px;
+        width: 6px;
       }
       ::-webkit-scrollbar-thumb {
         background: #494949;
@@ -51,7 +50,7 @@
         background: #626262;
       }
       ::-webkit-scrollbar-track {
-        background: #1f1f1f;
+        background: #192030;
         border: 0px none #8e8e8e;
         border-radius: 3px;
       }
